<?xml version="1.0" encoding="utf-8"?>
<com.hxzh.uniwill.lingjian.View.MyScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="vertical"
    android:fadingEdgeLength="100dp"
    android:background="@drawable/pic_bg3x" >


<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include layout="@layout/activity_base_toobar"/>

    <RelativeLayout
        android:id="@+id/seting_touxiang_layout"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/genggaitouxiang"
            android:textSize="14sp"/>
        <com.hxzh.uniwill.lingjian.View.CircleImageView
            android:id="@+id/Circle"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_alignParentRight="true"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/icon_left_bar_setting_photo3x"
            app:border_color="@color/white"/>
    </RelativeLayout>
    <View
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/white"/>
    <RelativeLayout
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/xingming"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/persionname"
            android:layout_toLeftOf="@+id/redone"
            android:layout_centerVertical="true"
            android:layout_marginRight="3dp"
            android:background="@android:color/transparent"
            android:textSize="17sp"
            android:hint="@string/xingming"
            android:textColorHint="#b2d3d6"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/redone"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/icon_star3x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <View
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/white"/>
    <RelativeLayout
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/zhiwei"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/personjob"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/redtwo"
            android:layout_marginRight="3dp"
            android:background="@android:color/transparent"
            android:textSize="17sp"
            android:hint="@string/zhiwei"
            android:textColorHint="#b2d3d6"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/redtwo"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/icon_star3x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <View
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/white"/>
    <RelativeLayout
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/gongsi"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/gongsiname"
            android:layout_toLeftOf="@+id/redthree"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:hint="@string/gongsimingchen"
            android:textColorHint="#b2d3d6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"/>
        <ImageView
            android:id="@+id/redthree"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/icon_star3x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/white"/>
    <RelativeLayout
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/bumen"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/bumenname"
            android:layout_toLeftOf="@+id/redfour"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:hint="@string/bumenlingdao"
            android:textColorHint="#b2d3d6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"/>
        <ImageView
            android:id="@+id/redfour"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/icon_star3x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/white"/>
    <RelativeLayout
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/shangji"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/leadname"
            android:layout_toLeftOf="@+id/redfive"
            android:layout_marginRight="3dp"
            android:background="@android:color/transparent"
            android:layout_centerVertical="true"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:hint="@string/shangjilingdao"
            android:textColorHint="#b2d3d6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/redfive"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/icon_star3x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/white"/>
    <RelativeLayout
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/dianhua"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/personphonenumber"
            android:background="@android:color/transparent"
            android:layout_toLeftOf="@+id/redsix"
            android:layout_centerVertical="true"
            android:layout_marginRight="3dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:hint="@string/dianhuahaoma"
            android:textColorHint="#b2d3d6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/redsix"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/icon_star3x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/white"/>
    <RelativeLayout
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/shouji"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/persontellphone"
            android:layout_toLeftOf="@+id/redseven"
            android:layout_marginRight="3dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:textSize="17sp"
            android:hint="@string/shoujihao"
            android:textColor="@color/white"
            android:textColorHint="#b2d3d6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/redseven"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/icon_star3x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/white"/>
    <RelativeLayout
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/youxiang"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/personemail"
            android:background="@android:color/transparent"
            android:layout_marginRight="3dp"
            android:textColor="@color/white"
            android:layout_toLeftOf="@+id/rednine"
            android:layout_centerVertical="true"
            android:textSize="17sp"
            android:hint="@string/youxiang_X"
            android:textColorHint="#b2d3d6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/rednine"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/icon_star3x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/white"/>
    <Button
        android:id="@+id/seting_baocun"
        android:textSize="16sp"
        android:text="@string/baocun"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/renwumiaoshu_bg"
        android:layout_width="330dp"
        android:layout_height="40dp" />

</LinearLayout>
</com.hxzh.uniwill.lingjian.View.MyScrollView>