<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic_bg3x">
    <include layout="@layout/activity_base_toobar"/>
    <TextView
        android:textSize="12sp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="25dp"
        android:text="@string/yonghu_name"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_marginTop="8dp"
        android:id="@+id/yonghu_name"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:background="@drawable/bg_editiext"
        android:padding="5dip"
        android:textColorHint="#b2d3d6"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        android:singleLine="true"
        android:hint="请输入用户名"  />
    <TextView
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="25dp"
        android:text="@string/yonghu_box"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_marginTop="8dp"
        android:id="@+id/yonghu_box"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_editiext"
        android:padding="5dip"
        android:textColorHint="#b2d3d6"
        android:textSize="15sp"
        android:singleLine="true"
        android:hint="请输入邮箱地址"  />
    
    <Button
        android:id="@+id/find_possword"
        android:background="@drawable/find_possword"
        android:layout_marginTop="28dp"
        android:textSize="16sp"
        android:text="@string/find_possword"
        android:textColor="#142f3d"
        android:layout_gravity="center_horizontal"
        android:layout_width="345dp"
        android:layout_height="55dp" />



</LinearLayout>