<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/load3x">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="315dp"
        android:background="@android:color/transparent"
        android:orientation="horizontal">
        
        <ImageView
            android:layout_marginStart="25dp"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:src="@drawable/load_icon_name"/>
        <EditText
            android:layout_marginLeft="3dp"
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/logname"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:singleLine="true"
            android:background="@android:color/transparent"/>
    </LinearLayout>
    <View
        android:layout_marginTop="2dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="330dp"
        android:layout_height="0.7dp"
        android:background="#ffffff"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@android:color/transparent"
        android:orientation="horizontal">

        <ImageView

            android:layout_marginStart="25dp"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:src="@drawable/load_icon_password"/>
        <EditText
            android:layout_marginLeft="3dp"
            android:password="true"
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:singleLine="true"
            android:background="@android:color/transparent"/>
    </LinearLayout>
    <View
        android:layout_marginTop="2dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="330dp"
        android:layout_height="0.7dp"
        android:background="#ffffff"/>

    <Button
        android:id="@+id/loagin"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/loading"
        android:textColor="#ffffff"
        android:textSize="19sp"
        android:focusable="true"
        android:background="@drawable/loading"
        android:layout_width="310dp"
        android:layout_height="wrap_content" />
    <TextView
        android:clickable="true"
        android:layout_gravity="center_horizontal"
        android:id="@+id/foget_password"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:text="@string/foget_possword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />




</LinearLayout>