<?xml version="1.0" encoding="utf-8"?>
<com.hxzh.uniwill.lingjian.View.SwipeMenuView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:paddingBottom="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <com.hxzh.uniwill.lingjian.View.CirclePercentView
            android:id="@+id/circleView"
            android:layout_centerVertical="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="8dp"
            app:stripeWidth="15"
            app:centerTextSize="14sp"
            app:bigColor="#00000000"
            app:radiuss="@dimen/radus_dp"
            app:smallColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageView
            android:layout_centerVertical="true"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="7dp"
            android:layout_marginBottom="5dp"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/ring"/>

        <LinearLayout
            android:layout_toRightOf="@id/circleView"
            android:id="@+id/linyout"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_title_list2"
                android:textSize="14sp"
                android:text="@string/renwu_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/text_persion_list2"
                android:textSize="11sp"
                android:text="@string/faburen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/white"/>


        </LinearLayout>
        <RelativeLayout
            android:layout_toRightOf="@id/linyout"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="80dp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            >
            <TextView
                android:textSize="16sp"
                android:textColor="@color/white"
                android:id="@+id/text_time_list2"
                android:text="@string/day_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_toRightOf="@id/text_time_list2"
                android:layout_marginLeft="2dp"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:id="@+id/text_day_list"
                android:text="@string/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:visibility="invisible"
                android:textColor="@color/white"
                android:background="@color/black_hehe"
                android:layout_marginTop="25dp"
                android:id="@+id/zhiding_item2"
                android:text="@string/zhiding_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <View
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_width="330dp"
            android:layout_height="0.5dp"
            android:background="#ffffff"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/btnTop"
        android:clickable="true"
        android:src="@drawable/list_slide_but_canstick3x"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        />
</com.hxzh.uniwill.lingjian.View.SwipeMenuView>